--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker build -t cygnetops/react-test -f ./client/Dockerfile.dev ./client
+      - run: docker build -t cygnetops/react-test -f ./Dockerfile.dev ./client
       - run: docker run -e CI=true cygnetops/react-test npm test
  
       - run: docker build -t cygnetops/multi-client-10-14 ./client
@@ -31,9 +31,9 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: multi-gh
-          environment_name: Multigh-env
-          existing_bucket_name: elasticbeanstalk-us-east-1-923445559289
-          region: us-east-1
+          application_name: Docker-react
+          environment_name: Docker-react-env
+          existing_bucket_name: elasticbeanstalk-eu-west-2-062156995563
+          region: eu-west-2
           version_label: ${{ github.sha }}
           deployment_package: deploy.zip
