--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,7 +21,7 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: Docker-react
+          application_name: Docker
           environment_name: Docker-env
           existing_bucket_name: elasticbeanstalk-eu-west-2-062156995563
           region: eu-west-2
