--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,8 +21,8 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: docker
-          environment_name: Docker-env
+          application_name: test-docker
+          environment_name: Test-docker-env
           existing_bucket_name: elasticbeanstalk-eu-west-2-062156995563
           region: eu-west-2
           version_label: ${{ github.sha }}
