--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,9 +21,9 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: React-docker
-          environment_name: React-docker-env
-          existing_bucket_name: elasticbeanstalk-eu-west-2-062156995563
-          region: eu-west-2
+          application_name: "React-docker"
+          environment_name: "React-docker-env"
+          existing_bucket_name: "elasticbeanstalk-eu-west-2-062156995563"
+          region: "eu-west-2"
           version_label: ${{ github.sha }}
           deployment_package: deploy.zip
