--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,6 +24,6 @@ jobs:
           application_name: "React-docker"
           environment_name: "React-docker-env"
           existing_bucket_name: "elasticbeanstalk-eu-west-2-062156995563"
-          region: "eu-west-2c"
+          region: "eu-west-2"
           version_label: ${{ github.sha }}
           deployment_package: deploy.zip
