--- a/multi/deploy.yaml
+++ b/multi/deploy.yaml
@@ -1,9 +1,9 @@
-name: Deploy Frontend
+name: Deploy MultiDocker
 on:
   push:
     branches:
       - master
-
+ 
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -12,18 +12,28 @@ jobs:
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - run: docker build -t cygnetops/react-test -f Dockerfile.dev .
       - run: docker run -e CI=true cygnetops/react-test npm test
-
+ 
+      - run: docker build -t cygnetops/multi-client-10-14 ./client
+      - run: docker build -t cygnetops/multi-nginx-10-14 ./nginx
+      - run: docker build -t cygnetops/multi-server-10-14 ./server
+      - run: docker build -t cygnetops/multi-worker-10-14 ./worker
+ 
+      - run: docker push cygnetops/multi-client-10-14
+      - run: docker push cygnetops/multi-nginx-10-14
+      - run: docker push cygnetops/multi-server-10-14
+      - run: docker push cygnetops/multi-worker-10-14
+ 
       - name: Generate deployment package
         run: zip -r deploy.zip . -x '*.git*'
-
+ 
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v18
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: "A-docker"
-          environment_name: "a-docker-env"
-          existing_bucket_name: "elasticbeanstalk-eu-west-2-062156995563"
-          region: "eu-west-2"
+          application_name: Docker-react
+          environment_name: Docker-react-env
+          existing_bucket_name: elasticbeanstalk-eu-west-2-062156995563
+          region: eu-west-2
           version_label: ${{ github.sha }}
           deployment_package: deploy.zip
