--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,5 +25,5 @@ jobs:
           environment_name: "a-docker-env"
           existing_bucket_name: "elasticbeanstalk-eu-west-2-062156995563"
           region: "eu-west-2"
-          version_label: ${{ github.run_number }}
+          version_label: ${{ "Sample"
           deployment_package: deploy.zip
