--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,9 +21,9 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: "A-docker"
-          environment_name: "a-docker-env"
+          application_name: "b-docker"
+          environment_name: "b-docker-env"
           existing_bucket_name: "elasticbeanstalk-eu-west-2-062156995563"
           region: "eu-west-2"
-          version_label: "Sample"
+          version_label: ${{ github.sha }}
           deployment_package: deploy.zip
